# qnapmanager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-09-qnapmanager.md
docs/superpowers/specs/: 2026-06-09-qnapmanager-design.md
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: client.rs
src/components/: ConfirmDeleteDialog.test.tsx  ConfirmDeleteDialog.tsx  LibraryTable.test.tsx  LibraryTable.tsx  Settings.tsx
src/lib/: format.test.ts  format.ts
